fixed the card details box visibility

--- a/index.css
+++ b/index.css
@@ -2,19 +2,28 @@ body {
     max-width: 500px;
     margin: 0 auto;
     font-family: roboto, sans-serif;
-    z-index: 1;
+    /* pointer-events: none; */
+    /* z-index: 1; */
 } 
 .mainPage {
     position: relative;
     z-index: 1;
 }
-.formPage {
+.pay {
     position: absolute;
     z-index: 10;
+    text-align: center;
     top: 30%;
-    left: 40%;
-    margin: 0 auto;
+    left: 30%; 
+    margin: auto;
+    max-width: 20rem;
+    pointer-events: auto;
     visibility: hidden;
+}
+.formPage {
+    display: flex;
+    flex-direction: column;
+
 }
 .header {
     background-image: url("./assets/images/background-burger.png");
@@ -112,8 +121,8 @@ body {
 }
 .form {
     text-align: center;
-    /* position: absolute;
-    z-index: 2; */
+    position: absolute;
+    z-index: 2;
 }
 .form form{
     display: flex;
